--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ node_js:
   - 5
   - 4
   - '0.10'
+services:
+  - postgresql
+env:
+  - PG_CONNECTION_STRING="postgres://postgres@localhost/travis_ci_test"
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
