improve release script

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "pretest": "npm run lint",
     "build": "babel ./src --out-dir ./lib --copy-files",
     "lint": "eslint src/ test/",
-    "release": "npm run build && npm publish",
+    "release": "npm run build && npm publish && git push && git push --tags",
     "preversion": "npm test",
+		"postversion": "npm run build",
     "test": "npm run test:quick",
     "test:quick": "babel-tape-runner test/*.js",
     "dev": "nodemon --exec npm -- run test:quick",
