--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/ test/",
     "release": "npm run build && npm publish && git push && git push --tags",
     "preversion": "npm test",
-		"postversion": "npm run build",
+    "postversion": "npm run build",
     "test": "npm run test:quick",
     "test:quick": "babel-tape-runner test/*.js",
     "dev": "nodemon --exec npm -- run test:quick",
@@ -39,11 +39,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-tape-runner": "^2.0.1",
-    "blue-tape": "^0.2.0",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.1",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "tape": "^4.5.1"
   },
   "dependencies": {
     "debug": "^2.2.0",
