--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "npm run test:quick",
     "test:quick": "babel-tape-runner test/*.js",
     "dev": "nodemon --exec npm -- run test:quick",
-    "docker": "docker-compose up dbcreate && docker-compose up -d db"
+    "docker": "blockai-dc && docker-compose up dbcreate"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-tape-runner": "^2.0.1",
+    "blockai-dc": "^1.0.0",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.1",
